--- a/package.json
+++ b/package.json
@@ -3,13 +3,38 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "@mui/material": "^5.2.5",
+    "@pancakeswap/uikit": "^0.61.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "add": "^2.0.6",
+    "aphrodite": "^2.4.0",
+    "assert": "^2.0.0",
+    "bootstrap": "^5.1.3",
+    "copy-to-clipboard": "^3.3.1",
+    "ethers": "^5.5.2",
+    "http": "^0.0.1-security",
+    "https": "^1.0.0",
+    "material-ui": "^0.20.2",
+    "os": "^0.1.2",
     "react": "^17.0.2",
+    "react-animation": "^1.2.2",
+    "react-animations": "^1.0.0",
+    "react-copy-to-clipboard": "^5.0.4",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.0"
+    "stream": "^0.0.2",
+    "styled-components": "^5.3.3",
+    "url": "^0.11.0",
+    "web-vitals": "^2.1.0",
+    "web3-utils": "^1.6.1",
+    "yarn": "^1.22.17"
   },
   "scripts": {
     "start": "react-scripts start",
